# k8sdoc-2024

./: .gitignore  .python-version  Makefile  README.md  httpd.yml  pod-hw.yml  pyproject.toml  service-httpd.yml  ss-mysql.yml  svc-db.yml  svc-mysql-np.yml  svc-mysql.yml
.devcontainer/: devcontainer.json
.github/workflows/: makefile.yml
source/: conf.py  index.rst
source/_static/css/: custom_sphinx_rtd_theme.css  fix-layout-property.css
source/network/: about.md  cluster-ip.md  index.rst  inner-pod.md  nodeport.md
source/network/sources/: deploy-pma.yml  deploy-ubuntu.yml  inner-pod.yml  mysql-and-controller.yml  mysql-with-controller.yml  ss-mysql-with-controller.yml  ss-mysql-with-shell.yml  svc-mysql-nodeport.yml  svc-mysql.yml  svc-pma.yml
source/probe/: index.rst  liveness.md  readiness.md  startup.md
source/probe/src/: pod-mysql-nowait.yml  pod-mysql-readinessprobe.yml  pod-mysql-startupprobe.yml  web-wait.yml
source/reset/: index.md
source/setup/: index.rst  kubectl.md  reset.md  setup.md
source/sidecar/: basic.md  index.rst  initContainer.md
source/sidecar/src/: web+loader.yml  (+1 more)
source/storage/: create-pvc.md  dd-host-storage.md  index.rst  local-resource.md  pv-pvc-sc.md  statefulset.md
source/tour/: autoheal.md  cleanup.md  httpd.md  index.rst  manifest-create.md  service.md
source/ui/: dashboard.md  headlamp.md  index.rst
source/whatis/: client-server.md  index.rst  whatis.md
source/workloads/: check-and-remove.md  deployment-replicaset.md  index.rst  manifesto.md  pod.md  replication.md
src/shou_ye_zi_liao/: __init__.py
(+27 files in other folders)
