[project]
name = "shou-ye-zi-liao"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "SATO Daisuke", email = "densuke@fuga.jp" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "sphinx>=8.0.2",
    "myst-parser>=4.0.0",
    "sphinx-autobuild>=2024.4.16",
    "sphinx-copybutton>=0.5.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/shou_ye_zi_liao"]
